overlays/apps/garage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: s3-ingressroute
  namespace: garage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`s3.int.mvaldes.dev`)
      services:
        - name: garage-svc
          port: 3900
    - kind: Rule
      match: Host(`s3ui.int.mvaldes.dev`)
      services:
        - name: garage-svc-ui
          port: 3909
